overflow issues

--- a/site/css/main.scss
+++ b/site/css/main.scss
@@ -205,6 +205,7 @@ body {
   @include custom-bezier(all, .4s);
   border-radius: 3px;
   min-height: 42px;
+  overflow: scroll;
 
   &.compare {
 		left: 440px;
@@ -303,6 +304,9 @@ body {
 		position: relative;
 		height: 31px;
 		line-height: 31px;
+		padding-right: 70px;
+		overflow: hidden;
+		text-overflow: ellipsis;
 
   	&:after, span {
 			content: 'Search';
